modules/gdscript/tests/scripts/parser/errors/bad_r_string_3.gd
func test():
	#         v
	print(r"['"]*")
